# duckdb-fractalsql

./: .gitignore  CMakeLists.txt  Makefile  README.md  THIRD-PARTY-NOTICES.md  build.sh
.github/workflows/: codeql.yml  post-release.yml  release.yml
docker/: Dockerfile  assert_so.sh
scripts/: append_metadata.py  package.sh
scripts/windows/: build.bat  win32_undefs_fi.h
sql/: load_extension.sql
src/: fractalsql_extension.cpp
src/include/: fractalsql_extension.hpp
test/: smoke_test.sql
